tests/syntax_error/bad_struct_name.jou
struct Foo:
    1: int  # Error: expected a name for a struct field, got an integer
